force-app/main/default/objects/Case_Role__c/Case_Role__c.object-meta.xml
<CustomObject>
    <description>This object contains a list of Accounts (Employers, Stake Holders, Employees, etc) related to this Case and the Entity</description>
    <label>Case Role</label>
    <nameField>
        <displayFormat>CR-{000000}</displayFormat>
        <label>Case Role ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>