force-app/main/default/objects/Case_Role__c/fields/Also_Related_To__c.field-meta.xml
<CustomField>
    <fullName>Also_Related_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Lookup and find the related account that should be listed on forms following the Relationship Description above.</inlineHelpText>
    <label>Related Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Case Roles (Also Related To)</relationshipLabel>
    <relationshipName>Case_Roles1</relationshipName>
    <type>Lookup</type>
</CustomField>