force-app/main/default/objects/Case_Role__c/fields/Case_Number__c.field-meta.xml
<CustomField>
    <fullName>Case_Number__c</fullName>
    <description>Formula field to migrate the Case Number from the Case to the Case Role object for use in an email template (auto response to Claim Form being submitted).</description>
    <formula>Case__r.Case_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Number</label>
    <type>Text</type>
</CustomField>