force-app/main/default/objects/Case_Role__c/fields/Case_Office_Information__c.field-meta.xml
<CustomField>
    <fullName>Case_Office_Information__c</fullName>
    <description>Formula field to migrate the DIR Office Name, Address, and Phone Number from the Case to the Case Role object for use in an email template (auto response to Claim Form being submitted).</description>
    <formula>Case__r.Office__r.Name  &amp; BR() &amp;
Case__r.DIR_Office_Address__c &amp; BR() &amp;
Case__r.DIR_Office_Phone_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Office Information</label>
    <type>Text</type>
</CustomField>