force-app/main/default/objects/Case_Role__c/fields/Case_Role_Status__c.field-meta.xml
<CustomField>
    <fullName>Case_Role_Status__c</fullName>
    <description>For requirement 33146; allows users to quickly view the status of related case roles to a given case record.</description>
    <label>Case Role Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Settled</fullName>
            </value>
            <value>
                <fullName>ODA - Defendant</fullName>
            </value>
            <value>
                <fullName>ODA - Plaintiff</fullName>
            </value>
            <value>
                <fullName>ODA by Settlement</fullName>
            </value>
            <value>
                <fullName>Dismissal - Claimant</fullName>
            </value>
            <value>
                <fullName>Dismissal - Deputy</fullName>
            </value>
            <value>
                <fullName>Dismissal - Ineffective service</fullName>
            </value>
            <value>
                <fullName>No Longer Active On Case</fullName>
            </value>
            <value>
                <fullName>De Novo Appeal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>