force-app/main/default/objects/Case_Role__c/fields/Case_Role_Unique_ID__c.field-meta.xml
<CustomField>
    <fullName>Case_Role_Unique_ID__c</fullName>
    <description>For data migration purposes</description>
    <label>Case Role Unique ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>