force-app/main/default/objects/Case_Role__c/fields/Compliance_with_SDT__c.field-meta.xml
<CustomField>
    <fullName>Compliance_with_SDT__c</fullName>
    <description>Indicates the entitie's compliance or not with a subpoena</description>
    <inlineHelpText>In the even that a subpoena has been issued to this party, select whether or not the party complied or not.</inlineHelpText>
    <label>Compliance with SDT</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Full</fullName>
            </value>
            <value>
                <fullName>Partial</fullName>
            </value>
            <value>
                <fullName>Non-Compliance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>