force-app/main/default/objects/Case_Role__c/fields/Conductor_Troubleshooting__c.field-meta.xml
<CustomField>
    <fullName>Conductor_Troubleshooting__c</fullName>
    <description>Used by Conga support to troubleshoot Conductor.</description>
    <formula>HYPERLINK("https://conductor.congamerge.com/composer8/index.html?SessionId="
+ $Api.Session_ID + "&amp;ServerURL=" + $Api.Partner_Server_URL_290 + Subpoena_URL__c,"Test")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conductor Troubleshooting</label>
    <type>Text</type>
</CustomField>