force-app/main/default/objects/Case_Role__c/fields/Date_Subpoena_Revocation_Letter_Sent__c.field-meta.xml
<CustomField>
    <fullName>Date_Subpoena_Revocation_Letter_Sent__c</fullName>
    <label>Date Subpoena Revocation Letter Sent</label>
    <type>Date</type>
</CustomField>