force-app/main/default/objects/Case_Role__c/fields/Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Email_Address__c</fullName>
    <description>Field is populated from FormAssembly. Reason is because Process Builder is not triggering when submitted from FormAssembly.</description>
    <label>Email Address</label>
    <type>Email</type>
</CustomField>