force-app/main/default/objects/Case_Role__c/fields/Entity_has_Attorney_or_is_Represented__c.field-meta.xml
<CustomField>
    <fullName>Entity_has_Attorney_or_is_Represented__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Entity has Attorney or is Represented</label>
    <type>Checkbox</type>
</CustomField>