force-app/main/default/objects/Case_Role__c/fields/Home_Phone__c.field-meta.xml
<CustomField>
    <fullName>Home_Phone__c</fullName>
    <formula>Entity__r.PersonContact.HomePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Home Phone</label>
    <type>Text</type>
</CustomField>