force-app/main/default/objects/Case_Role__c/fields/Imported_From__c.field-meta.xml
<CustomField>
    <fullName>Imported_From__c</fullName>
    <description>For migration purpose</description>
    <label>Imported From</label>
    <length>50</length>
    <type>Text</type>
</CustomField>