force-app/main/default/objects/Case_Role__c/fields/IsPersonAccount__c.field-meta.xml
<CustomField>
    <fullName>IsPersonAccount__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Written by FormAssembly if the Employer, Additional Employers, or Successor is a person account. Used by Apex code to know if the case role is a person account.</description>
    <label>IsPersonAccount</label>
    <type>Checkbox</type>
</CustomField>