force-app/main/default/objects/Case_Role__c/fields/Joint_Liability__c.field-meta.xml
<CustomField>
    <fullName>Joint_Liability__c</fullName>
    <label>Joint Liability</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Role__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>