force-app/main/default/objects/Case_Role__c/fields/Judgment2_URL__c.field-meta.xml
<CustomField>
    <fullName>Judgment2_URL__c</fullName>
    <description>No longer used. Moved to Account.
Used by WCA 115 Button and Conga Conductor.</description>
    <formula>"&amp;id=" + Id + 
"&amp;queryid=[Judgment]a0md00000064cjZAAQ?pv0=" + Entity__r.Id + "~pv1=" + Case__r.Id 
+ ",[JudgmentLineItems]a0md00000064cjaAAA?pv0=" + Entity__r.Id + "~pv1=" + Case__r.Id 
+ "&amp;reportid=[Employee]00Od0000004pzun?pv2=" + Case__c 
+ ",[Employors]00Od0000004pzuo?pv2=" + Case__c 
+ ",[All]00Od0000004pzup?pv2=" + Case__c 
+ "&amp;SC0=1"
+ "&amp;SC1=Attachments"
+ "&amp;AttachmentParentID=" +  Case__r.Id 
+ "&amp;qmode=Download" 
+ "&amp;DefaultPDF=0" 
+ "&amp;templateId=a0nd0000005OSvG" 
+ "&amp;OFN=WCA 42 Subpoena Personal-" + Case__r.Name + "-" + Entity__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Judgment 2 URL</label>
    <type>Text</type>
</CustomField>