force-app/main/default/objects/Case_Role__c/fields/Location_Address_Detail__c.field-meta.xml
<CustomField>
    <fullName>Location_Address_Detail__c</fullName>
    <description>This field is used the copy the Location records address detail, to display it under the Related Accounts of the Related List on the Case Managment.</description>
    <formula>IF(ISBLANK(Location__r.Address__c)," ",Location__r.Address__c + (IF(ISBLANK(Location_Street2__c), ", " , " " + Location_Street2__c + ", ")) + Location__r.City__c + ", " + TEXT(Location__r.State__c) + " " + Location__r.Zip_Code__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location Address Detail</label>
    <type>Text</type>
</CustomField>