force-app/main/default/objects/Case_Role__c/fields/Location_ATTN__c.field-meta.xml
<CustomField>
    <fullName>Location_ATTN__c</fullName>
    <description>This field us used for the Conga document. 
The Location information from the ATTN that is attached to a Case Role is copied into this formula fields so that it can be pulled into the Conga document.</description>
    <formula>Location__r.Attention_To__c</formula>
    <label>Location_ATTN</label>
    <type>Text</type>
</CustomField>