force-app/main/default/objects/Case_Role__c/fields/Location_State__c.field-meta.xml
<CustomField>
    <fullName>Location_State__c</fullName>
    <description>This field us used for the Conga document. The Location information from the Address that is attached to a Case Role is copied into this formula fields so that it can be pulled into the Conga document.</description>
    <formula>TEXT(Location__r.State__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location_State</label>
    <type>Text</type>
</CustomField>