force-app/main/default/objects/Case_Role__c/fields/Officer_Agent__c.field-meta.xml
<CustomField>
    <fullName>Officer_Agent__c</fullName>
    <description>Identifies a Case Role record's representing officer or agent where applicable.</description>
    <label>Officer/Agent</label>
    <length>75</length>
    <type>Text</type>
</CustomField>