force-app/main/default/objects/Case_Role__c/fields/Other_Language_or_Dialect__c.field-meta.xml
<CustomField>
    <fullName>Other_Language_or_Dialect__c</fullName>
    <label>Other Language or Dialect</label>
    <length>255</length>
    <type>Text</type>
</CustomField>