force-app/main/default/objects/Case_Role__c/fields/Other_Phone__c.field-meta.xml
<CustomField>
    <fullName>Other_Phone__c</fullName>
    <formula>Entity__r.PersonContact.OtherPhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Other Phone</label>
    <type>Text</type>
</CustomField>