force-app/main/default/objects/Case_Role__c/fields/PRA_Request_Name__c.field-meta.xml
<CustomField>
    <fullName>PRA_Request_Name__c</fullName>
    <description>PRA Request: Account Name with related Case Role</description>
    <formula>IF(CONTAINS(Account_Name__c, "Kingsburg Apple Packers Inc"), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PRA Request Name</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>