force-app/main/default/objects/Case_Role__c/fields/Related_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Related_Account_ID__c</fullName>
    <formula>Also_Related_To__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Account ID</label>
    <type>Text</type>
</CustomField>