force-app/main/default/objects/Case_Role__c/fields/Signer_Phone_if_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>Signer_Phone_if_Opt_Out__c</fullName>
    <formula>IF( SMS_Opt_Out__c  = True,'', Entity__r.Signer_Phone__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Signer Phone if Opt Out</label>
    <type>Text</type>
</CustomField>