force-app/main/default/objects/Case_Role__c/fields/SMS_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>SMS_Opt_Out__c</fullName>
    <formula>Entity__r.Text_Message_Opt_Out__c</formula>
    <label>Text Message Opt Out</label>
    <type>Checkbox</type>
</CustomField>