force-app/main/default/objects/Case_Role__c/fields/Subpoena_URL__c.field-meta.xml
<CustomField>
    <fullName>Subpoena_URL__c</fullName>
    <description>No Longer Used. Kept for legacy</description>
    <formula>"&amp;id=" +  Id  +
"&amp;reportid=[Employee]00OZ0000000LB0d?pv2=" + Case__c  
+ ",[Employors]00OZ0000000LB0Y?pv2=" + Case__c  
+ ",[All]00OZ0000000LBVg?pv2=" + Case__c  
+ "&amp;qmode=Download"
+ "&amp;DefaultPDF=0"
+ "&amp;templateId=a0nZ0000001eFU1"
+ "&amp;OFN=WCA 42 Subpoena Personal-" +  Case__r.Name  + "-" +   Entity__r.Name
+ "&amp;SC0=1"</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subpoena URL</label>
    <type>Text</type>
</CustomField>