force-app/main/default/objects/Case_Role__c/fields/Work_Phone__c.field-meta.xml
<CustomField>
    <fullName>Work_Phone__c</fullName>
    <formula>Entity__r.PersonContact.Work_Phone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Work Phone</label>
    <type>Text</type>
</CustomField>