force-app/main/default/objects/Case_Role__c/recordTypes/Garment.recordType-meta.xml
<RecordType>
    <fullName>Garment</fullName>
    <active>true</active>
    <label>Garment</label>
</RecordType>