force-app/main/default/objects/Case_Role__c/recordTypes/PAGA.recordType-meta.xml
<RecordType>
    <fullName>PAGA</fullName>
    <active>true</active>
    <description>PAGA Roles</description>
    <label>PAGA</label>
</RecordType>