force-app/main/default/objects/Case_Role__c/recordTypes/Registration.recordType-meta.xml
<RecordType>
    <fullName>Registration</fullName>
    <active>true</active>
    <label>Registration</label>
</RecordType>