force-app/main/default/objects/Case_Role__c/recordTypes/WCA.recordType-meta.xml
<RecordType>
    <fullName>WCA</fullName>
    <active>true</active>
    <description>If you have already created a meeting and wish this case role to be a Meeting Participant, you must also add it to the Meeting as a Meeting Participant.</description>
    <label>WCA</label>
</RecordType>